# aiogram-sqlalchemy-template

./: .env.ren  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  loader.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/commands/: __init__.py  admins.py  default.py
app/filters/: __init__.py  status.py
app/handlers/: __init__.py  error.py
app/handlers/admins/: __init__.py  notify.py  users.py
app/handlers/users/: __init__.py  lang.py  start.py
app/keyboards/: __init__.py  apply.py  base.py  lang.py
app/middlewares/: __init__.py  base.py  inter.py  user.py
app/middlewares/admins/: __init__.py  status.py
app/middlewares/users/: __init__.py  database.py  inter.py  user.py
app/states/: __init__.py  notify.py
data/: config.py
data/locales/: bot.pot
data/locales/en/LC_MESSAGES/: bot.mo  bot.po
data/locales/ru/LC_MESSAGES/: bot.mo  bot.po
data/locales/uk/LC_MESSAGES/: bot.mo  bot.po
database/: __init__.py  base.py
database/models/: __init__.py  base.py  user.py
migrations/: env.py
migrations/versions/: 2d1906b29fb5_added_tables.py  53dc7e57ae34_added_tables.py  7cd00f0aa656_added_tables.py  b41bbce04d8a_added_tables.py
utils/: logging.py
