[project]
name = "aiogram-sqlalchemy-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.20.0.post0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "environs>=14.1.1",
    "loguru>=0.7.3",
    "pytz>=2025.2",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.40",
]
